# plugin-lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  gemini-extension.json  manifest  plugin.json
.agents/: CLAUDE.md
.agents/plugins/: CLAUDE.md
.claude-plugin/: CLAUDE.md  plugin.json
.claude-plugin/docs/: CHANNELS.md  CHANNELS.md.diff  CHANNELS_REFERENCE.md  CHANNELS_REFERENCE.md.diff  CREATE_PLUGINS.md  CREATE_PLUGINS.md.diff  DISCOVER_PLUGINS.md  DISCOVER_PLUGINS.md.diff  PLUGINS_REFERENCE.md  PLUGINS_REFERENCE.md.diff  PLUGIN_MARKETPLACES.md  PLUGIN_MARKETPLACES.md.diff
.codex-plugin/: CLAUDE.md  plugin.json
.codex-plugin/docs/: BUILD_PLUGINS.md  BUILD_PLUGINS.md.diff  PLUGINS.md  PLUGINS.md.diff
actions/mcp-integration/: action.yml
agents/: CLAUDE.md  ally-the-aligner.md  dex-the-deployer.md  petra-the-pipeliner.md  rex-the-researcher.md  roddy-reviewer.md  ster-the-scaffolder.md  tilly-the-toolsmith.md
agents/claude/docs/: SUBAGENTS.md
agents/codex/docs/: SUBAGENTS.md
agents/docs/claude/: SUBAGENTS.md  SUBAGENTS.md.diff
agents/docs/codex/: SUBAGENTS.md  SUBAGENTS.md.diff
commands/: align-lab-plugin.md  create-lab-plugin.md  deploy-lab-plugin.md  pipeline-lab-plugin.md  research-lab-plugin.md  review-lab-plugin.md  setup-homelab.md  tool-lab-plugin.md
docs/: CHECKLIST.md  CLAUDE.md  CONFIG.md  GUARDRAILS.md  INVENTORY.md  README.md  SETUP.md  mcp-testing-standard.md  plugin-setup-guide.md  scaffold-template-mapping.md
docs/plugin/: AGENTS.md  CHANNELS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  HOOKS.md  MARKETPLACES.md  OUTPUT-STYLES.md  PLUGINS.md  SCHEDULES.md  SKILLS.md
docs/plugin-setup-guide/: README.md
docs/repo/: CLAUDE.md  MEMORY.md  RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/stack/: ARCH.md  CLAUDE.md  PRE-REQS.md  TECH.md
hooks/: CLAUDE.md
hooks/claude/docs/: HOOKS_GUIDE.md  HOOKS_REFERENCE.md
hooks/codex/docs/: HOOKS.md
hooks/docs/claude/: HOOKS_GUIDE.md  HOOKS_GUIDE.md.diff  HOOKS_REFERENCE.md  HOOKS_REFERENCE.md.diff
hooks/docs/codex/: HOOKS.md  HOOKS.md.diff
hooks/scripts/: ensure-ignore-files.sh  fix-env-perms.sh  sync-env.sh
output-styles/: CLAUDE.md
output-styles/docs/: OUTPUT_STYLES.md  OUTPUT_STYLES.md.diff
py/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
rs/: CLAUDE.md  Cargo.toml  Dockerfile  README.md
rs/.github/workflows/: publish-image.yaml
rs/my_plugin_mcp/: client.rs
scripts/: scaffold-plugin.sh  update-doc-mirrors.sh  validate-marketplace.sh
skills/: CLAUDE.md
skills/align-lab-plugin/: SKILL.md
skills/deploy-lab-plugin/: SKILL.md
skills/lab-research-specialist/: SKILL.md
skills/pipeline-lab-plugin/: SKILL.md
skills/review-lab-plugin/: SKILL.md
skills/scaffold-lab-plugin/: SKILL.md
skills/setup/: SKILL.md
skills/tool-lab-plugin/: SKILL.md
templates/: CLAUDE.md  gemini-extension.json
templates/.claude-plugin/: plugin.json
templates/.codex-plugin/: plugin.json
templates/agents/: CLAUDE.md
templates/assets/: CLAUDE.md
templates/docs/: CHECKLIST.md  CLAUDE.md  CONFIG.md  GUARDRAILS.md  INVENTORY.md  README.md  SETUP.md
templates/hooks/: CLAUDE.md
templates/output-styles/: CLAUDE.md
templates/py/: Dockerfile  Justfile
templates/rs/: Justfile
templates/skills/: CLAUDE.md
templates/tests/: CLAUDE.md
templates/ts/: Justfile  README.md  package.json  tsconfig.json
ts/: CLAUDE.md  Dockerfile  entrypoint.sh  lefthook.yml
ts/my_plugin_mcp/: index.ts
ts/scripts/: lint-plugin.sh
(+102 files in other folders)
