[package]
name = "my-plugin-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "MCP server for My Plugin with dual transport (HTTP + stdio)."
authors = ["Your team <team@example.com>"]
license = "MIT"

[[bin]]
name = "my-plugin-mcp"
path = "my_plugin_mcp/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
dotenvy = "0.15"
rmcp = { version = "1.1.0", features = [
  "server",
  "macros",
  "transport-io",
  "transport-streamable-http-server",
  "schemars",
  "elicitation"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"
